# effective-ai-agents

./: .env.example  .gitignore  README.md  pyproject.toml
config/: llm.py
src/1-prompt-chaining/: README.md  main.py
src/1-prompt-chaining/samples/: sample_jd.txt
src/1-prompt-chaining/steps/: step1_structure_jd.py  step2_extract_resume.py  step3_gap_analysis.py  step4_cover_letter.py  step5_interview_prep.py
src/1-prompt-chaining/utils/: pdf_reader.py
src/2-routing/: README.md  classifier.py  main.py
src/2-routing/writers/: blog.py  email.py  facebook.py  linkedin.py  reddit.py  x.py
src/3-parallelization/: README.md
src/3-parallelization/1-sectioning/: README.md  aggregator.py  fetcher.py  main.py
src/3-parallelization/1-sectioning/analyzers/: audience.py  cons.py  pros.py  sentiment.py
src/3-parallelization/2-voting/: README.md
src/4-orchestrator-workers/: README.md  graph.py  main.py  state.py
src/4-orchestrator-workers/nodes/: __init__.py  orchestrator.py  synthesizer.py  worker.py
src/5-evaluator-optimizer/: README.md  graph.py  main.py  state.py  stopping.py
src/5-evaluator-optimizer/nodes/: __init__.py  check.py  evaluator.py  generator.py  reporter.py
tests/: conftest.py  test_evaluator_optimizer.py  test_llm_config.py  test_main.py  test_orchestrator_workers.py  test_pdf_reader.py  test_sectioning_aggregator.py  test_step1.py  test_step2.py  test_step3.py  test_step4.py  test_step5.py
