[project]
name = "effective-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-tavily>=0.1.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "fpdf2>=2.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
